# tic-tac-toe

./: .gitignore  README.md
tic-tac-toe/: pyproject.toml
tic-tac-toe/src/: __init__.py  classes.py
tic-tac-toe/tic-tac-toe/: pyproject.toml
