[project]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = [
    {name = "Rohan Prashanth",email = "rohan.prashanth2010@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "tic_tac_toe", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
